# sublingo

./: .gitignore  AGENTS.md  config.json  pyproject.toml  take_screenshot.py  test_home.py  test_ui.py  update_ts.py
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-deno.txt  task-1-ffmpeg-attach.txt  task-1-project-structure.txt  task-1-pytest-collect.txt  task-1-uv-sync.txt  task-10-line-count.txt  task-10-tests.txt  task-11-tests.txt  task-12-build.txt  task-12-files.txt  task-12-pytest.txt  task-13-launch.txt  task-14-evidence.txt  task-15-settings.txt  task-16-evidence.txt  task-17-tests.txt  task-18-tests.txt  task-19-evidence.txt  task-2-constants.txt  task-2-tests.txt  task-20-tasks.json  task-20-ui.txt  task-21-full-pytest.txt  task-21-smoke-tests.txt  task-3-fonts-list.txt  task-3-glossary.txt  task-4-defaults.txt  task-4-tests.txt  task-5-ass-valid.txt  task-5-tests.txt  task-6-tests.txt  task-7-tests.txt  task-8-pytest.txt  task-8-tests.txt  task-9-tests.txt
.sisyphus/notepads/: task1-setup.md
.sisyphus/plans/: sublingo-gui.md
.sisyphus/rules/: code-quality.md  (+3 more)
glossaries/: example.csv
tests/: TESTING_STRATEGY.md  conftest.py  test_ai_client.py  test_batch_processing.py  test_config.py  test_cookie.py  test_downloader.py  test_ffmpeg.py  test_font.py  test_glossary.py  test_gui_smoke.py  test_i18n_utils.py  test_models.py  test_network_policy.py  test_project_dependencies.py  test_real_youtube_integration.py  test_subtitle.py  test_task_model.py  test_transcript.py  test_translator.py  test_workers.py  test_workflow.py  test_workflow_contracts.py
(+54 files in other folders)
