[project]
name = "sublingo"
version = "0.0.2"
description = "PySide6 desktop tool for YouTube subtitle workflows"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sublingo Team" }]
dependencies = [
    "PySide6>=6.7,<7.0",
    "yt-dlp[default]>=2025.1.0",
    "httpx>=0.27,<1.0",
    "pysubs2>=1.7,<2.0",
    "fonttools>=4.50,<5.0",
    "static-ffmpeg>=2.13,<3.0",
]

[project.scripts]
sublingo = "sublingo.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-qt>=4.4,<5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sublingo"]
